# weeabot

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  api.toml.example  botconfig.toml.example
bot/: main.rs
handlers/: botconfig.example  botconfig.toml  stateless.rs  with_state.rs
src/: botconf.rs  choices.rs  dab.rs  fck.rs  funkwhale.rs  fw.rs  ht.rs  language.rs  main.rs  notice.rs  pat.rs  rip.rs  romakana.rs  simple.rs  translate.rs
