[package]
name = "weeabot"
version = "0.1.0"
authors = ["Ciaran Ainsworth <ciaranainsworth@posteo.net>"]
edition = "2018"

[dependencies]
matrix_bot_api = "0.4.0"
fractal-matrix-api = "4.0.0"
config = "0.9.3"
wana_kana = "0.9.3"
rand = "0.7.0"
url = "1.7.1"
reqwest = "0.9.18"
serde = "1.0.94"
ytr = { path = "ytr" }