[package]
name = "weeabot"
version = "0.9.2"
authors = ["Ciarán Ainsworth <cda@rootkey.co.uk>"]
edition = "2018"

[dependencies]
matrix_bot_api = "0.5.2"
config = "0.10.1"
wana_kana = "2.0.1"
rand = "0.7.3"
ytr = "0.1.2"
chrono = "0.4.13"
serde = "1.0.117"
reqwest = { version = "0.10.9", features = ["json"] }
tokio = { version = "0.2.21", features = ["rt-core", "macros"] }
percent-encoding = "2.1.0"